--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!-- Header -->
-    <div class="container sm">
+    <div class="container">
       <main>
         <header>
           <div>
